--- a/index.html
+++ b/index.html
@@ -201,11 +201,19 @@
         	<div class="container">
         		<div class="row">
         			<div class="col-md-4">
-        				<img src="images/logo.png" class="img-responsive">
+        				<a href="#home">
+        					<img src="images/logo.png" class="img-responsive">
+        				</a>
         				<p>© 2018 Spectrum Photo</p>
         			</div>
         			<div class="col-md-offset-4 col-md-4">
-        				<p class="text-right social"><i class="typcn typcn-social-facebook-circular"></i><i class="typcn typcn-social-twitter-circular"></i><i class="typcn typcn-social-tumbler-circular"></i><i class="typcn typcn-social-github-circular"></i><i class="typcn typcn-social-dribbble-circular"></i></p>
+        				<div class="text-right social">
+        					<a href="#"><i class="typcn typcn-social-facebook-circular"></i></a>
+        					<a href="#"><i class="typcn typcn-social-twitter-circular"></i></a>
+        					<a href="#"><i class="typcn typcn-social-tumbler-circular"></i></a>
+        					<a href="#"><i class="typcn typcn-social-github-circular"></i></a>
+        					<a href="#"><i class="typcn typcn-social-dribbble-circular"></i></a>
+        				</div>
         			</div>
         		</div>
         	</div>
